# AIEDS

./: .env.example  .gitignore  README.md  docker-compose.yml
AI/: pyproject.toml
AI/ai/: __main__.py  chroma.py  query.py  server.py
AI/ai/data/: structured.txt
AI/chroma/: chroma.sqlite3
AI/server/: server.py
AI/tests/: pdf_reader.py
AI/tests/output/: content.txt
client/: package-lock.json  package.json  tailwind.config.js
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  index.css
client/src/Pages/: Doca.tsx  Docs.tsx  Home.tsx  Login.tsx  NotFound.tsx  Playground.tsx  Settings.tsx  cloudinaryUpload.jsx  cloudinaryUpload.tsx
client/src/components/: Team.jsx
client/src/context/: userContext.tsx  user_context.tsx
client/src/firebase/: index.ts
client/src/store/: context.ts  store.ts
db/base/1/: 1247_vm  1249  1259  1259_vm  13439_vm  13444_vm  13454_vm  2602_vm  2605_vm  2608  2612_vm  2618_vm  2619  2619_fsm  2619_vm  2658  2662  2663  2665  2666  2667  2675  2678  2696  2836  2836_vm  2837  2838_fsm  2839  2840  2840_vm  2841  3080  3394_vm  3601_vm  3602  3603  3604  3609  3764  (+2 more)
db/base/4/: 1255  1255_vm  1259  13443  13449  13449_vm  2579  2600_vm  2606_vm  2607_vm  2610  2610_vm  2618  2673  2679  2681  2684  2690  (+19 more)
db/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
db/pg_stat/: pgstat.stat
db/pg_xact/: 0000
docker/dev/: ai.dockerfile  app.dockerfile  server.dockerfile
server/: .gitignore  index.ts  package.json  tsconfig.json
server/docs/: content.txt
server/prisma/: schema.prisma
server/routes/: routes.ts
(+105 files in other folders)
