[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["sakshamshahu <sakshamshahu.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.12"
ollama = "^0.1.7"
unstructured = { version = "^0.12.3", python = ">=3.10,<3.12"}
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "ai.__main__:main"
