[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["sakshamshahu <sakshamshahu.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.12"
ollama = "^0.1.7"
unstructured = { version = "^0.12.3", python = ">=3.10,<3.12"}
opencv-python = "^4.9.0.80"
sentence-transformers = "^2.6.0"
chromadb = "^0.4.24"
numpy = "^1.26.4"
grpcio = "<=1.58.0"
scipy = "^1.12.0"
setuptools = "=64.0.0"
wheel = "^0.43.0"
scikit-learn = "^1.4.1.post1"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
requires-python = ">3"

[tool.poetry.scripts]
dev = "ai.__main__:main"
pdf = "tests.pdf_reader:main"
db = "ai.chroma:main"